# MultiRobotTaskAllocation

./: CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake  mrta_cppConfig.cmake
experiments/testing_setups/: test_json_parser.json
interface/: CMakeLists.txt  mrta_interface.cpp
interface/include/mrta_interface/: mrta_interface.h
solvers/: CMakeLists.txt  mrta_decentralized_generic_solver.cpp  mrta_decentralized_hss_solver.cpp  mrta_generic_solver.cpp  mrta_heuristic_solver.cpp  mrta_milp_solver.cpp  mrta_sorted_solver.cpp
solvers/include/mrta_solvers/: mrta_decentralized_generic_solver.h  mrta_decentralized_hss_solver.h  mrta_generic_solver.h  mrta_heuristic_solver.h  mrta_milp_solver.h  mrta_sorted_solver.h
test/: CMakeLists.txt  test_json_parser.cpp
usage_example/: CMakeLists.txt  decentralized_example.cpp  solution_file.json  usage_example.cpp  usage_example.json
utilities/: CMakeLists.txt  mrta_json_parser.cpp  mrta_json_writer.cpp
utilities/include/mrta_utilities/: mrta_config.h  mrta_json_parser.h  mrta_json_writer.h  mrta_solution.h
